# mem_cuda

./: CMakeLists.txt  main.cu  utils.h
